cmake_minimum_required(VERSION 3.24)
project(CompProg)

set(CMAKE_CXX_STANDARD 20)

add_executable(bitmaskDP AlgoPractice/bitmaskDP.cpp)
add_executable(ccc12j3 DMOJ/ccc12j3.cpp)
add_executable(ccc12j4 DMOJ/ccc12j4.cpp)
add_executable(ccc12s1 DMOJ/ccc12s1.cpp)
add_executable(ccc12s2 DMOJ/ccc12s2.cpp)
add_executable(ccc12s3 DMOJ/ccc12s3.cpp)
add_executable(ccc13j4 DMOJ/ccc13j4.cpp)
add_executable(ccc13s1 DMOJ/ccc13s1.cpp)
add_executable(ccc13s2 DMOJ/ccc13s2.cpp)
add_executable(ccc14s1 DMOJ/ccc14s1.cpp)
add_executable(ccc14s2 DMOJ/ccc14s2.cpp)
add_executable(ccc15j3 DMOJ/ccc15j3.cpp)
add_executable(ccc16s3 DMOJ/ccc16s3.cpp)
add_executable(ccc21j3 DMOJ/ccc21j3.cpp)
add_executable(ccc21s2 DMOJ/ccc21s2.cpp)
add_executable(cco20p1 DMOJ/cco20p1.cpp)
add_executable(coci18c4p2 DMOJ/coci18c4p2.cpp)
add_executable(crci06p1 DMOJ/crci06p1.cpp)
add_executable(deathgun DMOJ/deathgun.cpp)
add_executable(dmopc14c4p6 DMOJ/dmopc14c4p6.cpp)
add_executable(dmopc14c5p3 DMOJ/dmopc14c5p3.cpp)
add_executable(dmopc19c5p1 DMOJ/dmopc19c5p1.cpp)
add_executable(dmopc20c4p3 DMOJ/dmopc20c4p3.cpp)
add_executable(dmopc21c6p1 DMOJ/dmopc21c6p1.cpp)
add_executable(dpj DMOJ/dpj.cpp)
add_executable(dpl DMOJ/dpl.cpp)
add_executable(dpo DMOJ/dpo.cpp)
add_executable(dwite07c3p1 DMOJ/dwite07c3p1.cpp)
add_executable(dwite10c1p2 DMOJ/dwite10c1p2.cpp)
add_executable(gfssoc3s3 DMOJ/gfssoc3s3.cpp)
add_executable(helloworld DMOJ/helloworld.cpp)
add_executable(hkccc08j3 DMOJ/hkccc08j3.cpp)
add_executable(hkccc15j3 DMOJ/hkccc15j3.cpp)
add_executable(mwc15c1p1 DMOJ/mwc15c1p1.cpp)
add_executable(ncc1j4s2 DMOJ/nccc1j4s2.cpp)
add_executable(ncc3j4s2 DMOJ/nccc3j4s2.cpp)
add_executable(oly18novp3 DMOJ/oly18novp3.cpp)
add_executable(rectangle DMOJ/rectangle.cpp)
add_executable(rectanglecounting DMOJ/rectanglecounting.cpp)
add_executable(sac22cc5jp4 DMOJ/sac22cc5jp4.cpp)
add_executable(sleigh DMOJ/sleigh.cpp)
add_executable(treepractice1 DMOJ/treepractice1.cpp)
add_executable(triwayseg1 DMOJ/triwayseg1.cpp)
add_executable(usaco20janb1 DMOJ/usaco20janb1.cpp)
add_executable(usaco20marb1 DMOJ/usaco20marb1.cpp)
add_executable(year2015p1 DMOJ/year2015p1.cpp)
add_executable(ccc18s2 DMOJ/ccc18s2.cpp)
add_executable(a1 DMOJ/a1.cpp)
add_executable(aac1p1 DMOJ/aac1p1.cpp)
add_executable(acc5p3 DMOJ/acc5p3.cpp)
add_executable(acmtryouts0a DMOJ/acmtryouts0a.cpp)
add_executable(aplusb DMOJ/aplusb.cpp)
add_executable(bf1 DMOJ/bf1.cpp)
add_executable(bf3 DMOJ/bf3.cpp)
add_executable(bsspc21j2 DMOJ/bsspc21j2.cpp)
add_executable(bsspc21j4 DMOJ/bsspc21j4.cpp)
add_executable(bsspc22c1p1 DMOJ/bsspc22c1p1.cpp)
add_executable(bsspc22c1p2 DMOJ/bsspc22c1p2.cpp)
add_executable(bsspc22c1p3 DMOJ/bsspc22c1p3.cpp)
add_executable(bsspc22c1p4 DMOJ/bsspc22c1p4.cpp)
add_executable(bsspc22c1p5 DMOJ/bsspc22c1p5.cpp)
add_executable(ccc00s1 DMOJ/ccc00s1.cpp)
add_executable(ccc00s2 DMOJ/ccc00s2.cpp)
add_executable(ccc03s1 DMOJ/ccc03s1.cpp)
add_executable(ccc03s2 DMOJ/ccc03s2.cpp)
add_executable(ccc04j3 DMOJ/ccc04j3.cpp)
add_executable(ccc05j4 DMOJ/ccc05j4.cpp)
add_executable(sssp DMOJ/sssp.cpp)
add_executable(vmss7wc16c3p3 DMOJ/vmss7wc16c3p3.cpp)
add_executable(ccc09s4 "DMOJ/ccc09s4.cpp")
add_executable(mwc15c3p3 DMOJ/mwc15c3p3.cpp)
add_executable(weirdalgorithm "CSES/weirdalgorithm.cpp")
add_executable(missingnumber "CSES/missingnumber.cpp")
add_executable(repetitions "CSES/repetitions.cpp")
add_executable(increasingarray "CSES/increasingarray.cpp")
add_executable(c231pA Codeforces/c231pA.cpp)
add_executable(ccc05s1 DMOJ/ccc05s1.cpp)
add_executable(ccc05s2 DMOJ/ccc05s2.cpp)
add_executable(vmss15c1p4 DMOJ/vmss15c1p4.cpp)
add_executable(ccc05j5 DMOJ/ccc05j5.cpp)
add_executable(ccc06j4 DMOJ/ccc06j4.cpp)
add_executable(ccc06s3 DMOJ/ccc06s3.cpp)
add_executable(ccc07j4 DMOJ/ccc07j4.cpp)
add_executable(ccc09j1 DMOJ/ccc09j1.cpp)
add_executable(ccc11j3 DMOJ/ccc11j3.cpp)
add_executable(ccc11j4 DMOJ/ccc11j4.cpp)
add_executable(ccc11s2 DMOJ/ccc11s2.cpp)
add_executable(ccc12s4 DMOJ/ccc15s4.cpp)
add_executable(gfssoc2s4 DMOJ/gfssoc2s4.cpp)
add_executable(cco12p2 DMOJ/cco12p2.cpp)
add_executable(c546pA Codeforces/c546pA.cpp)
add_executable(usaco2020c12Bp1 "USACO/usaco2020c12Bp1.cpp")
add_executable(permutations "CSES/permutations.cpp")
add_executable(numberspiral "CSES/numberspiral.cpp")
add_executable(twoknights "CSES/twoknights.cpp")
add_executable(twosets "CSES/twosets.cpp")
add_executable(bitstrings "CSES/bitstrings.cpp")
add_executable(ccc10s1 DMOJ/ccc10s1.cpp)
add_executable(dmopc18c2p3 DMOJ/dmopc18c2p3.cpp)
add_executable(dmopc17c1p3 DMOJ/dmopc17c1p3.cpp)
add_executable(bts17p2 DMOJ/bts17p2.cpp)
add_executable(ccc17s4 DMOJ/ccc17s4.cpp)
add_executable(trailingzeros "CSES/trailingzeros.cpp")
add_executable(coinpiles "CSES/coinpiles.cpp")
add_executable(ccc20s2 DMOJ/ccc20s2.cpp)
add_executable(ccc21s1 DMOJ/ccc21s1.cpp)
add_executable(ccc22s2 DMOJ/ccc22s2.cpp)
add_executable(sac21ccp4 DMOJ/sac21ccp4.cpp)
add_executable(gfssoc2j4 DMOJ/gfssoc2j4.cpp)
add_executable(palindromereorder "CSES/palindromereorder.cpp")
add_executable(dpa DMOJ/dpa.cpp)
add_executable(spree DMOJ/spree.cpp)
add_executable(dp1p1 DMOJ/dp1p1.cpp)
add_executable(ccc07j5 DMOJ/ccc07j5.cpp)
add_executable(dpe DMOJ/dpe.cpp)
add_executable(cheerio3p1 DMOJ/cheerio3p1.cpp)
add_executable(ccc13s4 DMOJ/ccc13s4.cpp)
add_executable(oly20practice126 DMOJ/oly20practice126.cpp)
add_executable(dmopc14c1p3 DMOJ/dmopc14c1p3.cpp)
add_executable(nccc5j3s1 DMOJ/nccc5j3s1.cpp)
add_executable(mccc2s2 DMOJ/mccc2s2.cpp)
add_executable(mccc1j4 DMOJ/mccc1j4.cpp)
add_executable(ccc12s5 DMOJ/ccc12s5.cpp)
add_executable(ccc17j4 DMOJ/ccc17j4.cpp)
add_executable(dpb DMOJ/dpb.cpp)
add_executable(dpc DMOJ/dpc.cpp)
add_executable(ccc22j5 DMOJ/ccc22j5.cpp)
add_executable(dpd DMOJ/dpd.cpp)
add_executable(ccc23s1 DMOJ/ccc23s1.cpp)
add_executable(ccc23s2 DMOJ/ccc23s2.cpp)
add_executable(ccc23s4 DMOJ/ccc23s4.cpp)
add_executable(ccc23s3 DMOJ/ccc23s3.cpp)
add_executable(valday15p2 DMOJ/valday15p2.cpp)
add_executable(ccc23j1 DMOJ/ccc23j1.cpp)
add_executable(ccc23j2 DMOJ/ccc23j2.cpp)
add_executable(ccc23j3 DMOJ/ccc23j3.cpp)
add_executable(ccc23j5 DMOJ/ccc23j5.cpp)
add_executable(binary DMOJ/binary.cpp)
add_executable(bssmc23p2 "BSSCC/bssmc23p2.cpp")
add_executable(bpc1j3 DMOJ/bpc1j3.cpp)
add_executable(bssmc23p4 "BSSCC/bssmc23p4.cpp")
add_executable(dmopc18c2p1 DMOJ/dmopc18c2p1.cpp)
add_executable(ccc07j3 DMOJ/ccc07j3.cpp)
add_executable(dpz DMOJ/dpz.cpp)
add_executable(coci20c6p1 DMOJ/coci20c6p1.cpp)
add_executable(lcs DMOJ/lcs.cpp)
add_executable(ecoo21p2 DMOJ/ecoo21p2.cpp)
add_executable(ecoo21p3 DMOJ/ecoo21p3.cpp)